// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VApp.js should allow a custom id 1`] = `

<div data-app="true"
     class="application application--light"
     id="inspire"
>
</div>

`;

exports[`VApp.js should have an application class 1`] = `

<div data-app="true"
     class="application application--light"
     id="app"
>
</div>

`;

exports[`VApp.js should have data-app attribute 1`] = `

<div data-app="true"
     class="application application--light"
     id="app"
>
</div>

`;
